--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,13 @@
     package="huji.postpc.exercises.rachelsorder">
 
     <application
+        android:name=".RachelSandwichApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:windowSoftInputMode="adjustResize"
         android:theme="@style/Theme.RachelsOrder">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -16,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NewOrderActivity" />
+        <activity android:name=".InProgressActivity" />
+        <activity android:name=".WaitingOrderActivity" />
+        <activity android:name=".ReadyOrderActivity" />
     </application>
 
 </manifest>
